[gd_scene load_steps=30 format=3 uid="uid://csuyybbt5gbvf"]

[ext_resource type="Script" uid="uid://cogukkvwby5bd" path="res://scenes/main_menu.gd" id="1_7gahy"]
[ext_resource type="Texture2D" uid="uid://cip73hdpel468" path="res://assets/art/Noma Racer.png" id="1_r50e8"]
[ext_resource type="FontFile" uid="uid://8bvnb5g5uxop" path="res://assets/fonts/Racing Team - Personal Used.ttf" id="2_rtw2f"]
[ext_resource type="Script" uid="uid://cixtj15j0w8he" path="res://scripts/button_controller.gd" id="3_8ln24"]
[ext_resource type="Texture2D" uid="uid://dyv355vu5p5u8" path="res://assets/Damyck Logo.png" id="4_5dd4i"]
[ext_resource type="Script" uid="uid://02dxju6b4cfp" path="res://scripts/animation_component.gd" id="4_8ln24"]
[ext_resource type="AudioStream" uid="uid://ce2hpsipdm8n2" path="res://assets/music/real_menu_music.wav" id="4_tfcbk"]
[ext_resource type="FontFile" uid="uid://d2j6e6grqtmc5" path="res://assets/fonts/OTF/dogicabold.otf" id="5_lgwnu"]
[ext_resource type="AudioStream" uid="uid://rd0n2o5xp1f4" path="res://assets/music/sheathesound.mp3" id="6_lgwnu"]
[ext_resource type="Texture2D" uid="uid://bv0sw52inx020" path="res://assets/cars/car_sprites.png" id="7_jk1qb"]
[ext_resource type="Script" uid="uid://cyrgnj5ldp5xy" path="res://scenes/car_button.gd" id="8_jk1qb"]

[sub_resource type="Theme" id="Theme_oa1go"]
default_font = ExtResource("2_rtw2f")
default_font_size = 100
Label/colors/font_color = Color(0.828148, 0.343561, 9.62615e-07, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_flqon"]
atlas = ExtResource("4_5dd4i")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_rcqid"]
atlas = ExtResource("4_5dd4i")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_1ajci"]
atlas = ExtResource("4_5dd4i")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_7b55j"]
atlas = ExtResource("4_5dd4i")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_5pajh"]
atlas = ExtResource("4_5dd4i")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_j7ex8"]
atlas = ExtResource("4_5dd4i")
region = Rect2(240, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_a8gd2"]
atlas = ExtResource("4_5dd4i")
region = Rect2(288, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_hstxw"]
atlas = ExtResource("4_5dd4i")
region = Rect2(336, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_8egab"]
atlas = ExtResource("4_5dd4i")
region = Rect2(384, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_gw5y6"]
atlas = ExtResource("4_5dd4i")
region = Rect2(432, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_svtp6"]
atlas = ExtResource("4_5dd4i")
region = Rect2(480, 0, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_1dfpl"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_flqon")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rcqid")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1ajci")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7b55j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5pajh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j7ex8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a8gd2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hstxw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8egab")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gw5y6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_svtp6")
}],
"loop": false,
"name": &"default",
"speed": 20.0
}]

[sub_resource type="LabelSettings" id="LabelSettings_qywvv"]
font = ExtResource("5_lgwnu")
font_size = 34
font_color = Color(1, 0.13, 0.13, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_oa1go"]
atlas = ExtResource("7_jk1qb")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_tbmy8"]
atlas = ExtResource("7_jk1qb")
region = Rect2(0, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_jk1qb"]
atlas = ExtResource("7_jk1qb")
region = Rect2(0, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_5dd4i"]
atlas = ExtResource("7_jk1qb")
region = Rect2(0, 144, 48, 48)

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7gahy")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
offset_right = 1201.0
offset_bottom = 901.0
color = Color(0, 0.355833, 0.61, 1)

[node name="Title" type="Label" parent="CanvasLayer"]
visible = false
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -175.0
offset_top = 29.0
offset_right = 175.0
offset_bottom = 96.0
grow_horizontal = 2
theme = SubResource("Theme_oa1go")
text = "Pandy 500"

[node name="Sprite2D" type="TextureRect" parent="CanvasLayer"]
visible = false
offset_left = -1.99988
offset_top = -160.0
offset_right = 2478.0
offset_bottom = 3348.0
scale = Vector2(0.525529, 0.525529)
texture = ExtResource("1_r50e8")

[node name="Developed by" type="CanvasLayer" parent="CanvasLayer"]

[node name="DevLogo" type="AnimatedSprite2D" parent="CanvasLayer/Developed by"]
position = Vector2(455, 410)
scale = Vector2(2.4375, 2.4375)
sprite_frames = SubResource("SpriteFrames_1dfpl")
autoplay = "default"
frame = 10
frame_progress = 1.0

[node name="DevLabel" type="Label" parent="CanvasLayer/Developed by"]
offset_left = 520.0
offset_top = 388.0
offset_right = 1166.0
offset_bottom = 451.0
text = "Developed by 
Damyck"
label_settings = SubResource("LabelSettings_qywvv")

[node name="Sheathe" type="AudioStreamPlayer2D" parent="CanvasLayer/Developed by"]
stream = ExtResource("6_lgwnu")
autoplay = true

[node name="SelectMode" type="MenuButton" parent="CanvasLayer"]
visible = false
focus_mode = 2
text = "Select Game Mode"
switch_on_hover = true
item_count = 2
popup/item_0/text = "Single Player"
popup/item_0/id = 0
popup/item_1/text = "2 Players"
popup/item_1/id = 1
script = ExtResource("3_8ln24")
pos = Vector2(350, 200)
metadata/_edit_use_anchors_ = true

[node name="AnimationComponent" type="Node" parent="CanvasLayer/SelectMode"]
script = ExtResource("4_8ln24")
metadata/_custom_type_script = "uid://02dxju6b4cfp"

[node name="SelectCar" type="Button" parent="CanvasLayer"]
visible = false
offset_right = 287.0
offset_bottom = 41.0
text = "Select Car
"
flat = true
script = ExtResource("3_8ln24")
pos = Vector2(350, 200)
metadata/_edit_use_anchors_ = true

[node name="AnimationComponent" type="Node" parent="CanvasLayer/SelectCar"]
script = ExtResource("4_8ln24")
metadata/_custom_type_script = "uid://02dxju6b4cfp"

[node name="SelectTrack" type="MenuButton" parent="CanvasLayer"]
visible = false
focus_mode = 2
text = "Select Track
"
switch_on_hover = true
item_count = 2
popup/item_0/text = "Oval Track"
popup/item_0/id = 0
popup/item_1/text = "Drift Track"
popup/item_1/id = 1
script = ExtResource("3_8ln24")
pos = Vector2(350, 200)
metadata/_edit_use_anchors_ = true

[node name="AnimationComponent" type="Node" parent="CanvasLayer/SelectTrack"]
script = ExtResource("4_8ln24")
metadata/_custom_type_script = "uid://02dxju6b4cfp"

[node name="Cars" type="GridContainer" parent="CanvasLayer"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -208.5
offset_top = -150.0
offset_right = 208.5
offset_bottom = 212.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 2

[node name="PandaButton" type="Button" parent="CanvasLayer/Cars"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
icon = SubResource("AtlasTexture_oa1go")
flat = true
icon_alignment = 1
expand_icon = true
script = ExtResource("8_jk1qb")
car = "panda"

[node name="RacoonButton" type="Button" parent="CanvasLayer/Cars"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
icon = SubResource("AtlasTexture_tbmy8")
flat = true
icon_alignment = 1
expand_icon = true
script = ExtResource("8_jk1qb")
car = "racoon"

[node name="CrocoButton" type="Button" parent="CanvasLayer/Cars"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
icon = SubResource("AtlasTexture_jk1qb")
flat = true
icon_alignment = 1
expand_icon = true
script = ExtResource("8_jk1qb")
car = "croco"

[node name="TutelButton" type="Button" parent="CanvasLayer/Cars"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
icon = SubResource("AtlasTexture_5dd4i")
flat = true
icon_alignment = 1
expand_icon = true
script = ExtResource("8_jk1qb")
car = "turtle"

[node name="MainMenuMusic" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_tfcbk")

[connection signal="pressed" from="CanvasLayer/Cars/PandaButton" to="CanvasLayer/Cars/PandaButton" method="_on_pressed"]
[connection signal="pressed" from="CanvasLayer/Cars/RacoonButton" to="CanvasLayer/Cars/RacoonButton" method="_on_pressed"]
[connection signal="pressed" from="CanvasLayer/Cars/CrocoButton" to="CanvasLayer/Cars/CrocoButton" method="_on_pressed"]
[connection signal="pressed" from="CanvasLayer/Cars/TutelButton" to="CanvasLayer/Cars/TutelButton" method="_on_pressed"]
